--- a/tema2.html
+++ b/tema2.html
@@ -57,36 +57,45 @@
             <div class="tema_tekst_og_border">
                 <h2 class="tema_overskrift">Grundlæggende web</h2>
                 <div class="tema_tekst">
-                    <p>
-                        I dette Tema skulle vi lave studiestartsprøven samt udvikle et website ud fra valgt stil og eget
-                        emne.
-                        Vi blev introduceret til responsivt website, derfor har jeg udviklet mit emnesite til at have
-                        flere kolonner i grids ved
-                        desktop og kun 1-2 kolonner ved mobilversion.
+                    <div class="col_mrg">
+                        <p class="p_mrg">
+                            I dette Tema lavede vi studiestartsprøven, og derefter var opgaven at udvikle et website ud
+                            fra valgt stil og eget emne.
+                        </p>
+                        <p class="p_mrg">Vi blev introduceret til responsivt website, derfor udviklede jeg emnesitet til
+                            kun 1-2
+                            kolonner ved mobilversion og
+                            flere kolonner ved desktop, dette gjorde jeg ved brug af en ‘mobile first’ tilgang og media
+                            queries i CSS.</p>
+                        <p class="p_mrg">Vi blev introduceret for moodboards, styletile, wireframes og mockups.
+                            Min udvikling af wireframes og mockups i XD inden kodningsprocessen, hjalp mig i
+                            kodningen, da jeg havde noget
+                            konkret at forholde mig til. Jeg lærte derfor vigtigheden af mockups i en udviklingsproces,
+                            både som en del af
+                            designprocessen, men også som et led i kodningsprocessen af et design.
+                        </p>
+                        <p>I dette tema blev vi if.t. design introduceret for bla. gestaltprincipper, kontraster og
+                            farveharmonier.</p>
 
-                        Vi lærte også om wirefreames og mockups. Min udvikling af wireframes og mockups hjalp mig i
-                        kodningsprocessen, da jeg
-                        dermed havde noget konkret at forholde mig til og kode efter, så jeg undgik at designe mens jeg
-                        kodede. Jeg lærte
-                        vigtigheden af mockups både som en del af designprocessen men også som et led i kodning af
-                        designet også.
-
-                    </p>
-                    <p>
-                        I tema 2, blev vi også introduceret for bla. design konventioner, kontraster og farveharmonier.
-                        Da mit emnesite emne er
-                        ”Grøntsager - de røde”, valgte jeg derfor jordnære og mere afdæmpede farver. Hvor grøn og rød er
-                        hovedfarverne, der
-                        henholdsvis symboliserer grøntsager generelt og de røde grøntsager, der også er kontrastfarver.
-
-                        Til min emnesite har valgte jeg stilen ’retro’. Jeg gjorde brug af tekstur, ved at indsætte
-                        papirtekstur som baggrund
-                        samt tavle tekstur til faktaboksene. Her medvirker teksturen til en opslagstavle effekt, som jeg
-                        ønskede ift.
-                        komposition. Som kontrast og modspil til teksturen på baggrund og tavlen, står den helt
-                        teksturfri menu-bar og footer.
-
-                    </p>
+                    </div>
+                    <div>
+                        <p class="p_mrg"> Da mit emnesite
+                            omhandlede ‘Grøntsager - de <span>røde</span>’, valgte jeg derfor jordnære og mere afdæmpede
+                            farver. Hvor
+                            grøn og rød er
+                            hovedfarverne, der henholdsvis symboliserer grøntsager generelt og de røde grøntsager og
+                            samtidig giver kontrast.</p>
+                        <p class="p_mrg">
+                            Til min emnesite valgte jeg stilen ’retro’, og valgte hertil en gammeldags skrivemaskine
+                            font.
+                            Jeg gjorde brug af tekstur, ved at indsætte papirtekstur som baggrund samt tavletekstur til
+                            faktaboksene. Som kontrast
+                            og modspil til teksturen på baggrund og tavle, står den helt tekstur fri menu-bar og footer.
+                        </p>
+                        <p>Herudover lærte vi om rettigheder for digitale materialer som billeder, derfor er billederne
+                            jeg har udvalgt til mig
+                            emnesite, fra licenskrævende sider som Unsplash og Colourbox.</p>
+                    </div>
                 </div>
             </div>
 
