--- a/tema3.html
+++ b/tema3.html
@@ -55,40 +55,56 @@
 
 
             <div class="tema_tekst_og_border">
-                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <h2 class="tema_overskrift">Grundlæggende UX</h2>
                 <div class="tema_tekst">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
+                    <div class="col_mrg">
+                        <p class="p_mrg">
+                            I dette tema skulle vi udarbejde koncept og design til en fiktiv webshop, der
+                            sælger
+                            t-shirts,
+                            med en god
+                            brugeroplevelse og et USP.
+                        </p>
+                        <p class="p_mrg">
+                            Vi blev introduceret for forskellige researchmetoder: desktop research,
+                            interview, survey og
+                            observation. Her brugte jeg
+                            desktop research til at finde allerede eksisterende viden til at udvikle mit koncept og
+                            brugeroplevelsen.
+
+
+                        </p>
+                        <p class="p_mrg">
+                            Fx. fandt jeg
+                            at forbrugertilliden er faldet i 2022, at forbrugere i højere grad ønsker holdbarhed og
+                            bæredygtighed og at mand/kvinde
+                            kategorier ikke nødvendigvis er er vigtig. Derfor valgte jeg at en standard t-shirt kostede
+                            199DKK og var af bæredygtigt
+                            materiale. Samt brød jeg med mand/kvinde kategorien, netop for at websitet levede op til det
+                            politisk frie koncept.</p>
+                        <p>
+                            Herefter brugte jeg de andre researchmetoder til at generere egen viden om min valgte
+                            målgruppe:
+                            18-35 årige.
+                        </p>
+                    </div>
+                    <div>
+                        <p class="p_mrg">
+                            Fx. fandt jeg via. interview og survey ud af at en t-shirts med et politisk standpunkt kan
+                            åbne interessen for samtale
+                            mellem personer, men også skabe irritation og vrede. Derfor valgte jeg livlige farver til
+                            produkterne og skrev tydeligt
+                            webshoppens værdier om åben samtale og nuancering på sitet.
+                            For at give bedre brugeroplevelse på webshoppen, valgte jeg bla. at lave brødkrumme-menu og
+                            underoverskrifter til større
+                            tekster. Samt at fremhæve citater, der vækker læselysten.
+                        </p>
+                        <p>
+                            If.t. design løsningen vil jeg i fremtiden undgå centreret tekst ved større tekstmængder, da
+                            det er problematisk som
+                            bruger at skimme teksten igennem. Samt tilføje illustrationer til teksttunge sider.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -97,7 +113,7 @@
         <div class="loesning_grid">
             <div class="knap_img_div">
                 <a href="https://xd.adobe.com/view/03cc7315-2cea-4c2d-a2d2-bcd06e576f09-569f/" target="_blank">
-                    <img src="fotos/tema_3/knap_foto3.jpg" alt="">
+                    <img src="fotos/tema_3/knap_foto3.JPG" alt="Tema 3">
                     <div class="knap">
                         <p>Se prototype</p>
                     </div>
@@ -106,7 +122,7 @@
             <div class="knap_img_div">
                 <a href="https://drive.google.com/file/d/1E2a2JFQwnyTSSKiUGTm1acvhw9h0lAR4/view?usp=sharing"
                     target="_blank">
-                    <img src="fotos/tema_3/knap_foto33.jpg" alt="">
+                    <img src="fotos/tema_3/knap_foto33.JPG" alt="Tema 3">
                     <div class="knap">
                         <p> Se pitch slideshow</p>
                     </div>
