--- a/tema4.html
+++ b/tema4.html
@@ -52,40 +52,52 @@
 
 
             <div class="tema_tekst_og_border">
-                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <h2 class="tema_overskrift">Grundlæggende animation</h2>
                 <div class="tema_tekst">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
+                    <div class="col_mrg">
+                        <p class="p_mrg">
+                            I tema 4, blev vi introduceret for css-animationer og Javascript, hvor vil skulle udvikle og
+                            designe eget spil.
+                        </p>
+                        <p class="p_mrg">
+                            For at få inspiration til et spil-konceptet startede jeg med at idegenerere. Det gjorde jeg
+                            ved at udarbejde et mindmap,
+                            der tog udgangspunkt i konflikter.
+                            Her erfarede jeg efterfølgende, at jeg ved brug af fx. cross method kunne have kommet frem
+                            til mere atypiske og unikke
+                            problemstillinger til mit spil, da man tvinges til at tænke anderledes.
+                        </p>
+                        <p>
+                            Vi lærte om forskellige designprincipper if.t. spil og karakterdesign, hvilket jeg brugte
+                            til at udvikle det visuelle
+                            udtryk i mit spil.
+                            Her brugte jeg fx. min viden om perspektiv og baggrundsdesign, til at bringe dybde til mit
+                            flat-design. Her videre
+                            arbejdede jeg på flat-designet, ved at give formernes forskellige flader en anden farvetone.
+
+                        </p>
+                    </div>
+                    <div>
+                        <p class="p_mrg">
+                            Dette gjorde jeg for at give en mere spændende spilleoplevelse.
+                            Herudover valgte jeg at undgå twinning på de primære figurerer, for at give dem mere
+                            karakter og skabe et mere
+                            personligt og livligt udtryk.
+
+                        </p>
+                        <p class="p_mrg">
+                            For at give en bedre forståelse af mellemgrund og baggrund af mit spildesign, ville jeg have
+                            tegnet en kulørt lyskæde
+                            til at sætte ind som en del af baggrunden, som jeg desværre ikke nåede pga. tid.
+                        </p>
+                        <p>
+                            For at få selve spillet til at fungere blev vi introduceret for bla. Javascript funktioner,
+                            variabler og betingelser.
+                            Her kunne jeg fx. med brug af Javascript kontrollere påsætning og fjernelse af klasser, samt
+                            med brug af if-else, skrive
+                            forskellig tekst ved gameover og level complete skærmene.
+                        </p>
+                    </div>
                 </div>
             </div>
 
