--- a/tema5.html
+++ b/tema5.html
@@ -52,40 +52,54 @@
 
 
             <div class="tema_tekst_og_border">
-                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <h2 class="tema_overskrift">Grundlæggende indhold</h2>
                 <div class="tema_tekst">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
+                    <div class="col_mrg">
+                        <p class="p_mrg">
+                            I Tema 5 var opgaverne at lave en pilotvideo om en passion med et præsenterende pilotsite,
+                            samt
+                            i grupper, at redesigne
+                            en virksomheds eksisterende website.
+                        </p>
+                        <p class="p_mrg">
+                            Vi blev introduceret for bl.a videoklipning, interviewteknik, billedbeskæring, og
+                            perspektiv.
+                            Herefter kunne jeg
+                            planlægge videoen, ved at skitsere forskellige billedbeskæringer og indstillinger, og skrive
+                            interviewspørgsmål med åbne
+                            spørgsmål, der gav interviewpersonen mulighed for at uddybe og på den måde give sit bidrag
+                            til videoens retning.
+                        </p>
+                        <p class="p_mrg">
+                            For at præsentere pilotvideoen på pilotsitet tog jeg udgangspunkt i videoens indhold: Twitch
+                            streaming. Derfor udviklede
+                            jeg sitet på Twitchs farvekombinationer lilla, hvid og grå, for skabe direkte associationer
+                            til twitch.
+                        </p>
+
+                    </div>
+                    <div>
+                        <p>
+                            Redesign processen startede vi med research som vi lærte i tema 3. Vi udarbejdede et
+                            interview med virksomhedsejeren,
+                            for bl.a at lære om forretnings identitet og hvordan de ønsker brugeren opfatter deres
+                            website.
+                        </p>
+                        <p class="p_mrg">
+                            Herefter lavede vi et Survey for at brugerteste deres eksisterende site, samt interview af
+                            brugere, for at se om det
+                            stemte overens med virksomhedens ønsker.
+                            Efter testen kunne vi se at deres site kunne forbedres ift. overblik over sidens indhold, at
+                            skabe en hyggelig og
+                            inspirationsrigt indtryk hos brugeren, som var en del af virksomhedens ønsker
+                        </p>
+                        <p>
+                            Ved redesignopgaven lærte jeg vigtigheden af et konkret styletile ved gruppearbejde, for at
+                            skabe sammenhæng i designet.
+                            Dette vil huskes til fremtidige opgaver, samt at tjekke at videoudstyr er opladt og at
+                            mikrofonen er ideel.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -105,7 +119,7 @@
                     <a href="https://anah0116.github.io/redesign/index.html" target="_blank">
                         <img src="fotos/tema_5/knap_foto55.jpg" alt="">
                         <div class="knap">
-                            <p>redesign</p>
+                            <p>Se redesign</p>
                         </div>
                     </a>
 
