--- a/tema6.html
+++ b/tema6.html
@@ -90,6 +90,34 @@
             </div>
 
         </article>
+
+        <h2 class="loes_pro_overskrift">Proces</h2>
+        <div class="proces_menu">
+            <a href="#moodboard6">Moodboard</a>
+            <a href="#styletile6">Styletile</a>
+            <a href="#skitse6">Wireframe</a>
+            <a href="#mockup6">Mockup</a>
+            <a href="#illustrator6">Adobe Illustrator</a>
+            <a href="#illustrator6">Adobe XD</a>
+        </div>
+        <div class="proces_grid">
+            <img class="proces_ekstra_pad order2" src="fotos/tema_3/Moodboard.jpg" alt="Moodboard">
+            <div class="order1" id="moodboard3">
+                <p><span>Portfolio</span> - Moodboard</p>
+            </div>
+            <img class="order4" src="fotos/tema_3/Styletile.jpg" alt="Styletile">
+            <div class="order3" id="styletile3">
+                <p><span>Portfolio</span> - Styletile</p>
+            </div>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_3/skitse_fs.jpg" alt="Skitse">
+            <div class="order5" id="skitse3">
+                <p><span>Portfolio</span> - Wireframe af </p>
+            </div>
+            <img class="order8" src="fotos/tema_3/skitse.jpg" alt="Skitse">
+            <div class="order7">
+                <p><span>Portfolio</span> - Adobe Illustrator</p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>Portfolio af Anahita</p>
