--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="tema3.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_3_foto111.jpg" alt="Tema3">
+                        <img src="fotos/temax/tema_3_foto111.jpg" alt="Tema3">
                     </div>
                     <p>Tema 3</p>
                 </div>
@@ -101,7 +101,7 @@
             <a href="tema6.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/temax/tema_6_foto.jpg" alt="">
+                        <img src="fotos/temax/tema_6_foto.JPG" alt="">
                     </div>
                     <p>Tema 6</p>
                 </div>
