--- a/ommig.html
+++ b/ommig.html
@@ -24,13 +24,10 @@
 
 <body>
     <header>
-
-
-
         <nav>
-            <div class="logo"> <a href="index.html"> <img src="logo.svg" alt="logo"></a></div>
+            <div class="logo_navn"> <a href="index.html"> Ana<span>-</span>Hita</a></div>
             <ul class="menu_liste">
-                <li class="portfolio_om_mig">Portfolio</li>
+                <li> <a href="index.html#vaelg_tema" class="nav_link portfolio_om_mig">Portfolio</a></li>
                 <li><a href="tema2.html" class="nav_link nav_tema">Tema 2</a></li>
                 <li><a href="tema3.html" class="nav_link nav_tema">Tema 3</a></li>
                 <li><a href="tema4.html" class="nav_link nav_tema">Tema 4</a></li>
@@ -45,9 +42,115 @@
                 <span class="burger_bar"></span>
             </div>
         </nav>
-
     </header>
-    <main></main>
+    <main>
+        <h1>Om mig</h1>
+        <img src="SVG/ommig_blomster_ren.svg" alt="Blomster">
+        <div class="id_grid">
+            <img src="fotos/ommig/ommig_foto2.jpg" alt="Portræt">
+            <div>
+                <dl>
+                    <dt>Navn</dt>
+                    <dd class="dd_mrg">Anahita</dd>
+                    <dt>Studie</dt>
+                    <dd>Multimediedesign &shy;- 1. semester &shy;</dd>
+                </dl>
+            </div>
+        </div>
+
+        <img src="SVG/ommig_blomster.svg" alt="Blomster">
+        <article class="hvid_baggrund">
+            <div>
+                <div class="om_mig_grid">
+                    <div class="om_mig_tekst">
+                        <h2 class="tema_overskrift">Tegning og kunst</h2>
+                        <p class="p_mrg">
+                            Inden Multimediedesign på KEA har jeg været på grundkursus i klassisk tegning på
+                            TegneskoleKBH,
+                            da
+                            tegning er noget jeg
+                            sætter pris på og dyrker.
+                        </p>
+                        <p class="p_mrg">
+                            Samt har jeg været vikar på et grafisk kontor, der åbnede min interesse for den digitale
+                            udtryksform
+                            og den dyre Adobe,
+                            som som jeg gerne ville lære bedre at kende, da det ved første øjekast kan virke
+                            overvældende
+                            for en
+                            analog sjæl som
+                            mig.
+                        </p>
+                        <p>
+                            I min gymnasietid har jeg desuden beskæftiget mig med at lave plakater til skolen
+                            fester
+                            og
+                            andre begivenheder.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="fotos/ommig/plakat1.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+        </article>
+        <div class="tegning_og_cv_grid">
+            <img class="tegning" src="fotos/ommig/tegning3.jpg" alt="">
+
+
+
+            <div class="cv">
+                <h2>CV</h2>
+                <dl class="cv_liste">
+
+                    <dt>2017 - 2020</dt>
+                    <dd>
+                        <p class="dd">Helsingør Gymnasium</p>
+                        <p class="dd_info">- STX</p>
+                    </dd>
+                    <dt>2021</dt>
+                    <dd>
+                        <p class="dd">TegneskoleKBH</p>
+                        <p class="dd_info">- Grafisk arbejde</p>
+                    </dd>
+                    <dt>2022</dt>
+                    <dd>
+                        <p class="dd">Helsingør ungdomsskole</p>
+                        <p class="dd_info">- Grafisk arbejde</p>
+                    </dd>
+                </dl>
+            </div>
+        </div>
+        <!-- <div class="tegninger_cv_grid">
+            <img class="tegning" src="fotos/ommig/tegning1.jpg" alt="">
+            <img class="tegning" src="fotos/ommig/tegning2.jpg" alt="">
+
+
+            <div class="cv">
+                <h2>CV</h2>
+                <dl class="cv_liste">
+
+                    <dt>2017 - 2020</dt>
+                    <dd>
+                        <p class="dd">Helsingør Gymnasium</p>
+                        <p class="dd_info">- STX</p>
+                    </dd>
+                    <dt>2021</dt>
+                    <dd>
+                        <p class="dd">TegneskoleKBH</p>
+                        <p class="dd_info">- Grafisk arbejde</p>
+                    </dd>
+                    <dt>2022</dt>
+                    <dd>
+                        <p class="dd">Helsingør ungdomsskole</p>
+                        <p class="dd_info">- Grafisk arbejde</p>
+                    </dd>
+                </dl>
+            </div>
+        </div> -->
+    </main>
     <footer>
         <p>Portfolio af Anahita</p>
         <p>11.01.2023</p>
