--- a/tema4.html
+++ b/tema4.html
@@ -106,7 +106,7 @@
         <div class="loesning_grid">
             <div class="knap_img_div">
                 <a href="https://hita.dk/kea/04_animation/website/index.html" target="_blank">
-                    <img src="fotos/tema_4/knap_foto4.jpg" alt="">
+                    <img src="fotos/tema_4/knap_foto4.JPG" alt="">
 
 
                     <div class="knap">
