--- a/tema5.html
+++ b/tema5.html
@@ -108,7 +108,7 @@
         <div class="loesning_grid">
             <div class="knap_img_div">
                 <a href="https://anah0116.github.io/pilotsite/" target="_blank">
-                    <img src="fotos/tema_5/knap_foto5.jpg" alt="">
+                    <img src="fotos/tema_5/knap_foto5.JPG" alt="">
                     <div class="knap">
                         <p>Se pilotsite</p>
                     </div>
@@ -117,7 +117,7 @@
             <div>
                 <div class="knap_img_div">
                     <a href="https://anah0116.github.io/redesign/index.html" target="_blank">
-                        <img src="fotos/tema_5/knap_foto55.jpg" alt="">
+                        <img src="fotos/tema_5/knap_foto55.JPG" alt="">
                         <div class="knap">
                             <p>Se redesign</p>
                         </div>
