--- a/tema6.html
+++ b/tema6.html
@@ -52,47 +52,42 @@
 
 
             <div class="tema_tekst_og_border">
-                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <h2 class="tema_overskrift">Portfolio</h2>
                 <div class="tema_tekst">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
-                        ex
-                        veniam
-                        ducimus
-                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
-                        facilis.
-                        Lorem
-                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
-                        cum
-                        harum
-                        at
-                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
-                        mollitia
-                        rerum.
-                    </p>
+                    <div class="col_mrg">
+                        <p class="p_mrg">
+                            For at lave mit portfolio-site har jeg brugt mine erfaringer gennem mit første semester på
+                            KEA. Ved udarbejdning af mit
+                            portfolio-site, har jeg derfor lavet moodboards for at kunne fange den stemning og det
+                            udtryk jeg ønsker for min side.
+                            Herefter kunne jeg udarbejde et styletile for at konkretisere udtrykket med bl.a. fonte,
+                            farver og knapper.
+                        </p>
+                        <p>
+                            Ved udvikling af designet på siden har jeg skitseret wireframes for at finde opstillinger,
+                            samt eksperimenteret med
+                            mockups, for at kunne visualisere portfolio-sitet og have noget konkret at forholde mig til
+                            i kodningsdelen.
+                        </p>
+                    </div>
+                    <div>
+                        <p>
+                            Gennem udviklingsforløbet har jeg løbende nedskrevet hvilke elementer der skulle laves,
+                            viderebearbejdes eller ændres,
+                            for på den måde at have greb om processen og tidshorisonten.
+                            Jeg har gennem processen flere gange gået tilbage og ændret elementer, og på den måde haft
+                            et iterativt forløb, som har
+                            givet mig plads til nye ideer.
+
+                        </p>
+                    </div>
                 </div>
             </div>
 
         </article>
 
         <h2 class="loes_pro_overskrift">Proces</h2>
-        <div class="proces_menu">
+        <div class="proces_menu" id="proces_menu6">
             <a href="#moodboard6">Moodboard</a>
             <a href="#styletile6">Styletile</a>
             <a href="#skitse6">Wireframe</a>
