--- a/ommig.html
+++ b/ommig.html
@@ -2,7 +2,6 @@
 <html lang="da">
 
 <head>
-    <!-- ikke færdig! -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <!-- favicon herunder -->
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
@@ -82,7 +80,7 @@
                             mig.
                         </p>
                         <p>
-                            I min gymnasietid har jeg desuden beskæftiget mig med at lave plakater til skolen
+                            I min gymnasietid har jeg desuden beskæftiget mig med at lave plakater til skolens
                             fester
                             og
                             andre begivenheder.
@@ -113,7 +111,7 @@
                     <dt>2021</dt>
                     <dd>
                         <p class="dd">TegneskoleKBH</p>
-                        <p class="dd_info">- Grafisk arbejde</p>
+                        <p class="dd_info">- Klassisk tegning</p>
                     </dd>
                     <dt>2022</dt>
                     <dd>
