--- a/tema6.html
+++ b/tema6.html
@@ -2,7 +2,7 @@
 <html lang="da">
 
 <head>
-    <!-- ikke færdig! -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <!-- favicon herunder -->
+
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="menu.css">
@@ -90,27 +90,53 @@
         <div class="proces_menu" id="proces_menu6">
             <a href="#moodboard6">Moodboard</a>
             <a href="#styletile6">Styletile</a>
-            <a href="#skitse6">Wireframe</a>
+            <a href="#wireframe6">Wireframe</a>
             <a href="#mockup6">Mockup</a>
             <a href="#illustrator6">Adobe Illustrator</a>
-            <a href="#illustrator6">Adobe XD</a>
+            <a href="#adobe6">Adobe XD</a>
         </div>
         <div class="proces_grid">
-            <img class="proces_ekstra_pad order2" src="fotos/tema_3/Moodboard.jpg" alt="Moodboard">
-            <div class="order1" id="moodboard3">
+            <img class="proces_ekstra_pad order2" src="fotos/tema_6/moodboard_6.jpg" alt="Moodboard">
+            <div class="order1" id="moodboard6">
                 <p><span>Portfolio</span> - Moodboard</p>
             </div>
-            <img class="order4" src="fotos/tema_3/Styletile.jpg" alt="Styletile">
-            <div class="order3" id="styletile3">
+            <img class="order4" src="fotos/tema_6/styletile_6.jpg" alt="Styletile">
+            <div class="order3" id="styletile6">
                 <p><span>Portfolio</span> - Styletile</p>
             </div>
-            <img class="proces_ekstra_pad order6" src="fotos/tema_3/skitse_fs.jpg" alt="Skitse">
-            <div class="order5" id="skitse3">
-                <p><span>Portfolio</span> - Wireframe af </p>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_6/skitse_1.jpg" alt="Skitse">
+            <div class="order5" id="wireframe6">
+                <p><span>Portfolio</span> - Skitsering af wireframe </p>
             </div>
-            <img class="order8" src="fotos/tema_3/skitse.jpg" alt="Skitse">
+
+            <img class="order8" src="fotos/tema_6/skitse_2.jpg" alt="Skitse">
             <div class="order7">
-                <p><span>Portfolio</span> - Adobe Illustrator</p>
+                <p><span>Portfolio</span> - Skitsering af wireframe</p>
+            </div>
+
+            <img class="order10" src="fotos/tema_6/mockup_forside.jpg" alt="Skitse">
+            <div class="order9" id="mockup6">
+                <p><span>Portfolio</span> - Mockup af forside</p>
+            </div>
+            <img class="order12" src="fotos/tema_6/mockup_temaside.jpg" alt="Skitse">
+            <div class="order11">
+                <p><span>Portfolio</span> - Mockup af temaside</p>
+            </div>
+            <img class="order14" src="fotos/tema_6/mockup_ommig.jpg" alt="Skitse">
+            <div class="order13">
+                <p><span>Portfolio</span> - Mockup af Om mig</p>
+            </div>
+            <img class="order16" src="fotos/tema_6/ai.JPG" alt="Skitse">
+            <div class="order15" id="illustrator6">
+                <p><span>Portfolio</span> - Arbejde i Adobe Illustrator</p>
+            </div>
+            <img class="order18" src="fotos/tema_6/logo.JPG" alt="Skitse">
+            <div class="order17">
+                <p><span>Portfolio</span> - Udkast til evt. menu logo</p>
+            </div>
+            <img class="order20" src="fotos/tema_6/xd.JPG" alt="Skitse">
+            <div class="order19" id="adobe6">
+                <p><span>Portfolio</span> - Arbejde i Adobe XD</p>
             </div>
         </div>
     </main>
